Adding units in Imperial setting results in inconsistent values #38722

Closed
opened 2014-02-19 16:37:32 +01:00 by Jeff Lange · 16 comments

System Information
Windows 7

Blender Version
Broken: 2.69.0 r60995

Short description of error
Using arithmetic in the the properties panel does not function as expected when using units. Not assigning units defaults to feet in the Dimensions section of the Transform section under the Properties panel. However, using arithmetic causes the result to be inconsistent with what is expected.

For example, type in "2" in the X Dimension, and it will result in 2 feet. Typing in "2+2" will result in 4 feet. This is what you'd expect.
However, type in "2+2in" and the result is 6.727 feet. The expected result would be 2(feet) plus two inches (2.167 feet), so this is not what you'd expect.

This affects any work using arithmetic and units.

Exact steps for others to reproduce the error

  1. On the default start-up scene, go to the Scene panel on the Properties panel and set the units to Imperial.
  2. In the 3D View window's property panel, go to Transform, then Dimensions, and type in "4" in the X Dimension. It will result in 4' (four feet).
  3. If you type "2+2 in" into the X Dimension, it will result in 6.728' (over six feet). However, typing "2 ft+2 in" will result in the desired result of 2.167' (two feet and two inches).

Screen Recording of error
Embedded gif blender-units-bug.gif
Link to gif http://i.imgur.com/f2BZ6pK.gif
Link to html5 http://gfycat.com/NeatPerkyAssassinbug

Thank you.

**System Information** Windows 7 **Blender Version** Broken: 2.69.0 r60995 **Short description of error** Using arithmetic in the the properties panel does not function as expected when using units. Not assigning units defaults to feet in the Dimensions section of the Transform section under the Properties panel. However, using arithmetic causes the result to be inconsistent with what is expected. For example, type in "2" in the X Dimension, and it will result in 2 feet. Typing in "2+2" will result in 4 feet. This is what you'd expect. However, type in "2+2in" and the result is 6.727 feet. The expected result would be 2(feet) plus two inches (2.167 feet), so this is not what you'd expect. This affects any work using arithmetic and units. **Exact steps for others to reproduce the error** 1. On the default start-up scene, go to the Scene panel on the Properties panel and set the units to Imperial. 2. In the 3D View window's property panel, go to Transform, then Dimensions, and type in "4" in the X Dimension. It will result in 4' (four feet). 3. If you type "2+2 in" into the X Dimension, it will result in 6.728' (over six feet). However, typing "2 ft+2 in" will result in the desired result of 2.167' (two feet and two inches). **Screen Recording of error** Embedded gif ![blender-units-bug.gif](https://archive.blender.org/developer/F78099/blender-units-bug.gif) Link to gif http://i.imgur.com/f2BZ6pK.gif Link to html5 http://gfycat.com/NeatPerkyAssassinbug Thank you.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @jefftml

Added subscriber: @jefftml

#40008 was marked as duplicate of this issue

#40008 was marked as duplicate of this issue
Bastien Montagne self-assigned this 2014-02-19 16:54:25 +01:00
Author

I should add that doing the same process in Metric works properly. "2+2cm" is 2.02m. It seems to only effect Imperial units.

I should add that doing the same process in Metric works properly. "2+2cm" is 2.02m. It seems to only effect Imperial units.
Bastien Montagne was unassigned by Campbell Barton 2014-02-20 06:19:25 +01:00
Campbell Barton self-assigned this 2014-02-20 06:19:25 +01:00

Added subscriber: @mont29

Added subscriber: @mont29
Campbell Barton was unassigned by Bastien Montagne 2014-03-18 16:22:02 +01:00
Bastien Montagne self-assigned this 2014-03-18 16:22:02 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @gandalf3

Added subscriber: @gandalf3

◀ Merged tasks: #40008.

◀ Merged tasks: #40008.

This issue was referenced by 47983ccec5bad1cceb34183aa00fcf31d500649e

This issue was referenced by 47983ccec5bad1cceb34183aa00fcf31d500649e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 47983ccec5.

Closed by commit 47983ccec5.

Stupid bots…

Stupid bots…

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

This issue was referenced by 8535b9bd15

This issue was referenced by 8535b9bd15434dc76e599a95a041422b17153116

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8535b9bd15.

Closed by commit 8535b9bd15.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38722
No description provided.